--- a/settings.gradle
+++ b/settings.gradle
@@ -63,6 +63,7 @@ include 'epilogue-runtime'
 include 'thirdparty:googletest'
 include 'thirdparty:imgui_suite'
 include 'wpical'
+include 'libdatalog'
 
 buildCache {
     def cred = {
