--- a/wpimath/src/main/python/semiwrap/kinematics/DifferentialDriveKinematics.yml
+++ b/wpimath/src/main/python/semiwrap/kinematics/DifferentialDriveKinematics.yml
@@ -8,7 +8,7 @@ classes:
     methods:
       DifferentialDriveKinematics:
       ToChassisSpeeds:
-      ToWheelSpeeds:
+      ToWheelVelocities:
       ToTwist2d:
         overloads:
           const wpi::units::meter_t, const wpi::units::meter_t [const]:
