--- a/wpimath/src/main/python/semiwrap/kinematics/Kinematics.yml
+++ b/wpimath/src/main/python/semiwrap/kinematics/Kinematics.yml
@@ -1,10 +1,10 @@
 extra_includes:
 - wpi/math/kinematics/DifferentialDriveWheelAccelerations.hpp
 - wpi/math/kinematics/DifferentialDriveWheelPositions.hpp
-- wpi/math/kinematics/DifferentialDriveWheelSpeeds.hpp
+- wpi/math/kinematics/DifferentialDriveWheelVelocities.hpp
 - wpi/math/kinematics/MecanumDriveWheelAccelerations.hpp
 - wpi/math/kinematics/MecanumDriveWheelPositions.hpp
-- wpi/math/kinematics/MecanumDriveWheelSpeeds.hpp
+- wpi/math/kinematics/MecanumDriveWheelVelocities.hpp
 - wpi/math/kinematics/SwerveModuleAcceleration.hpp
 - wpi/math/kinematics/SwerveDriveKinematics.hpp
 
@@ -15,11 +15,11 @@ classes:
     - wpi::util::array
     template_params:
     - WheelPositions
-    - WheelSpeeds
+    - WheelVelocities
     - WheelAccelerations
     methods:
       ToChassisSpeeds:
-      ToWheelSpeeds:
+      ToWheelVelocities:
       ToTwist2d:
       Interpolate:
       ToChassisAccelerations:
@@ -31,13 +31,13 @@ templates:
     qualname: wpi::math::Kinematics
     params:
     - wpi::math::DifferentialDriveWheelPositions
-    - wpi::math::DifferentialDriveWheelSpeeds
+    - wpi::math::DifferentialDriveWheelVelocities
     - wpi::math::DifferentialDriveWheelAccelerations
   MecanumDriveKinematicsBase:
     qualname: wpi::math::Kinematics
     params:
     - wpi::math::MecanumDriveWheelPositions
-    - wpi::math::MecanumDriveWheelSpeeds
+    - wpi::math::MecanumDriveWheelVelocities
     - wpi::math::MecanumDriveWheelAccelerations
   SwerveDrive2KinematicsBase:
     qualname: wpi::math::Kinematics
