--- a/wpimath/src/main/python/semiwrap/kinematics/Odometry.yml
+++ b/wpimath/src/main/python/semiwrap/kinematics/Odometry.yml
@@ -1,10 +1,10 @@
 extra_includes:
 - wpi/math/kinematics/DifferentialDriveWheelAccelerations.hpp
 - wpi/math/kinematics/DifferentialDriveWheelPositions.hpp
-- wpi/math/kinematics/DifferentialDriveWheelSpeeds.hpp
+- wpi/math/kinematics/DifferentialDriveWheelVelocities.hpp
 - wpi/math/kinematics/MecanumDriveWheelAccelerations.hpp
 - wpi/math/kinematics/MecanumDriveWheelPositions.hpp
-- wpi/math/kinematics/MecanumDriveWheelSpeeds.hpp
+- wpi/math/kinematics/MecanumDriveWheelVelocities.hpp
 - wpi/math/kinematics/SwerveModuleAcceleration.hpp
 - wpi/math/kinematics/SwerveDriveKinematics.hpp
 
@@ -12,7 +12,7 @@ classes:
   wpi::math::Odometry:
     template_params:
     - WheelPositions
-    - WheelSpeeds
+    - WheelVelocities
     - WheelAccelerations
     methods:
       Odometry:
@@ -28,13 +28,13 @@ templates:
     qualname: wpi::math::Odometry
     params:
     - wpi::math::DifferentialDriveWheelPositions
-    - wpi::math::DifferentialDriveWheelSpeeds
+    - wpi::math::DifferentialDriveWheelVelocities
     - wpi::math::DifferentialDriveWheelAccelerations
   MecanumDriveOdometryBase:
     qualname: wpi::math::Odometry
     params:
     - wpi::math::MecanumDriveWheelPositions
-    - wpi::math::MecanumDriveWheelSpeeds
+    - wpi::math::MecanumDriveWheelVelocities
     - wpi::math::MecanumDriveWheelAccelerations
   SwerveDrive2OdometryBase:
     qualname: wpi::math::Odometry
